[gd_scene load_steps=4 format=3 uid="uid://p78yeca5k444"]

[ext_resource type="Script" path="res://scene/core/force-trigger.gd" id="1_52h62"]
[ext_resource type="Texture2D" uid="uid://b1jv1fj6a5y4h" path="res://assets/img/props/ui.png" id="2_ig1mx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo7ub"]
resource_local_to_scene = true

[node name="Node2D" type="Area2D" groups=["trigger"]]
collision_layer = 0
script = ExtResource("1_52h62")

[node name="Handle" type="Marker2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lo7ub")

[node name="HealthBar" type="NinePatchRect" parent="."]
unique_name_in_owner = true
light_mask = 0
z_index = 1
offset_left = -7.0
offset_top = 4.0
offset_right = 7.0
offset_bottom = 7.0
texture = ExtResource("2_ig1mx")
region_rect = Rect2(12, 24, 6, 6)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="HealthProgress" type="ColorRect" parent="HealthBar"]
unique_name_in_owner = true
light_mask = 0
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 7.0
offset_bottom = 2.0
color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
